--- a/batch-processing/src/main/resources/application.properties
+++ b/batch-processing/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#DataSource Configuration
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=passwd
+spring.datasource.platform=postgres
