--- a/batch-processing/src/main/resources/application.properties
+++ b/batch-processing/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=passwd
 spring.datasource.platform=postgres
+
+#Spring Batch
+spring.batch.job.name=importDBUserJob
