db 소문자 batch 추가

--- a/batch-processing/src/main/resources/application.properties
+++ b/batch-processing/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=passwd
 spring.datasource.platform=postgres
 
 #Spring Batch
-spring.batch.job.name=importDBUserJob
+spring.batch.job.name=importSmallizeUserJob
