--- a/batch-processing/src/main/resources/application.properties
+++ b/batch-processing/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=postgres
 spring.datasource.password=passwd
 spring.datasource.platform=postgres
 
+#Mybatis
+mybatis.mapper-locations=mapper/*.xml
+
 #Spring Batch
 spring.batch.job.name=importSmallizeUserJob
 #spring.batch.job.name=importCapitalizeUserJob
