spring batch test 설정 중

--- a/batch-processing/src/main/resources/application.properties
+++ b/batch-processing/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.platform=postgres
 mybatis.mapper-locations=mapper/*.xml
 
 #Spring Batch
-spring.batch.job.name=importSmallizeUserJob
+#spring.batch.job.name=importSmallizeUserJob
 #spring.batch.job.name=importCapitalizeUserJob
-
+spring.batch.initialize-schema=embedded
