--- a/batch-processing/src/test/resources/application.properties
+++ b/batch-processing/src/test/resources/application.properties
@@ -1,16 +1,13 @@
 # H2
-spring.datasource.url=jdbc:h2:mem:test;MODE=PostgreSQL;
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
 spring.datasource.password=passwd
 spring.datasource.driver-class-name=org.h2.Driver
 
-# Init Schema
-spring.sql.init.mode=always
-spring.sql.init.always-continue=true
-spring.sql.init.schema-locations=classpath:schema-h2.sql
+#Mybatis
+mybatis.mapper-locations=mapper/*.xml
 
 #Spring Batch
-#spring.batch.job.name=importSmallizeUserJob
-#spring.batch.job.name=importCapitalizeUserJob
-spring.batch.initialize-schema=always
+spring.batch.job.name=_
+spring.batch.jdbc.initialize-schema=always
 
